plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'dev.kostromdan.mods'
version = ''

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    maven {
        url 'https://repo.lwjgl.org/'
    }
}

def lwjglVersion = '3.2.2'
def lwjglNatives = {
    def osName = System.getProperty('os.name').toLowerCase()
    if (osName.contains('win')) {
        return 'natives-windows'
    } else if (osName.contains('mac')) {
        return 'natives-macos'
    } else if (osName.contains('nix') || osName.contains('nux') || osName.contains('aix')) {
        return 'natives-linux'
    } else {
        throw new GradleException('Unsupported operating system')
    }
}()

dependencies {
    implementation 'org.apache.logging.log4j:log4j-core:2.24.2'
    implementation 'org.apache.logging.log4j:log4j-api:2.24.2'
    implementation 'com.electronwill.night-config:toml:3.6.4'
    implementation 'com.electronwill.night-config:json:3.6.4'
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'gs.mclo:api:4.0.1'

    implementation "org.lwjgl:lwjgl:$lwjglVersion"
    runtimeOnly "org.lwjgl:lwjgl:$lwjglVersion:$lwjglNatives"
    implementation "org.lwjgl:lwjgl-vulkan:$lwjglVersion"

    implementation project(path: ':common_config')
}

jar {
    manifest {
        attributes(
                'Main-Class': 'dev.kostromdan.mods.crash_assistant.app.class_loading.Boot',
                'Launcher-Agent-Class': 'dev.kostromdan.mods.crash_assistant.app.class_loading.CrashAssistantAgent',
                'Agent-Class': 'dev.kostromdan.mods.crash_assistant.app.class_loading.CrashAssistantAgent',
                'Premain-Class': 'dev.kostromdan.mods.crash_assistant.app.class_loading.CrashAssistantAgent'
        )
    }
}

shadowJar {
    from("$rootDir/LICENSE") {
        rename { "CRASH_ASSISTANT_LICENSE" }
        into ""
    }
    dependsOn(':common_config:build')
    archiveClassifier.set('')
    dependencies {
        exclude(dependency('org.apache.logging.log4j:.*'))
        exclude(dependency('com.google.code.gson:.*'))
        exclude(dependency('commons-io:commons-io:2.15.1'))
        exclude("windows/**")
        exclude '**/*.dll', '**/*.so', '**/*.dylib', '**/*.sha1', '**/*.git'
    }
}

build.finalizedBy(shadowJar)